--- a/chat-back/chatService/package.json
+++ b/chat-back/chatService/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "amqplib": "^0.10.4",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
@@ -9,6 +13,7 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
