--- a/chat-back/chatService/src/.env
+++ b/chat-back/chatService/src/.env
@@ -2,4 +2,5 @@ PORT=5001
 DB_CONNECTION_STRING = "mongodb+srv://jjoster301:123456789a@chat.srjfook.mongodb.net/?retryWrites=true&w=majority&appName=chat"
 DB_NAME = chat
 RABBITMQ_URL=amqp://localhost
-JWT_SECRET=your_jwt_secret
+JWT_ACCESS_SECRET=pStPitlquOFMp5qQOopxlQ$U3BgefQj8r
+JWT_REFRESH_SECRET=yvzb83vy7T.0bck5v6zxCaIgvY1Up35h
